# sbmfi_public

./: .dockerignore  README.md  sbmfi_demo.ipynb  setup.cfg  setup.py
src/sbmfi/: settings.py
src/sbmfi/core/: adducts.py  fml_parser.py  formula.py  linalg.py  metabolite.py  model.py  nist_mass.py  observation.py  polytopia.py  reaction.py  simulator.py  simulfuncs.py  util.py
src/sbmfi/inference/: bayesian.py  complotting.py  flow_trainer.py  mdvae.py  normflows_patch.py  priors.py  ratio_prior.py  thermo_prior.py
src/sbmfi/models/: 1-s2.0-S1096717615000038-mmc1.xlsx  LCMS_total_intensity.csv  antoniewicz.txt  build_models.py  create_tomek_sbml_model.ipynb  model_sources.txt  small_models.py
src/sbmfi/models/escher_input/map/: e_coli_core_tomek.json  spiro.json
src/sbmfi/models/escher_input/model/: e_coli_core_tomek.json  spiro.json
src/sbmfi/models/fml/: TCAexample_jqmm.fml  ecoli_model_level_3.fml  sens.fml  spiro.fml
src/sbmfi/models/sbml/: e_coli_anton.xml  e_coli_tomek.xml  spiro.xml
src/sbmfi/tests/test_core/: conftest.py
