[metadata]
name = sbmfi
version = 0.0.0
url = https://gitlab.ethz.ch/Patrickens/sbmfi
;download_url = https://test.pypi.org/project/pysumoflux/
project_urls =
	Source Code = https://gitlab.ethz.ch/Patrickens/sbmfi
author = Tomek Diederen
author_email = diederen@imsb.biol.ethz.ch
maintainer = Tomek Diederen
maintainer_email = diederen@imsb.biol.ethz.ch
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT license
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
description = sumoflux is a package to simulate cumomers
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
	metabolism
	biology
	constraint-based
	linear programming
	metabolic flux analysis
	optimization
	cumomers
	reconstruction

[options]
zip_safe = False
python_requires = >= 3.8
# include_package_data = True
install_requires =
	numpy
	scipy
	sympy
	gurobipy==9.5.1
	cvxpy
	pandas
	cobra
	scikit-learn
	tables
	pytest
	gurobipy
;	pta
	pypoman
	sbi
	ray[tune]
	arviz
	openpyxl
	PolyRound
	line_profiler
	lxml
	normflows

packages = find:
package_dir =
	= src

[options.packages.find]
where = src

[options.package_data]
models/fml =
	*.fml
models/sbml =
	*.xml

[bdist_wheel]
universal = 1